# Remi

./: .env.example  .gitignore  ARCHITECTURE.md  DIAGRAMS.md  Dockerfile  INCLINE.md  PHILOSOPHY.md  README.md  ROADMAP.md  SKILL.md  VISION.md  docker-compose.yaml  knowledge-ingestion.plan.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.cursor/plans/: agent_os_memory_and_protocol_c715a74c.plan.md
.cursor/rules/: architecture-alignment.mdc  remi-navigation.mdc  remi.mdc  reports-are-not-ontologies.mdc  skill-capability-architecture.mdc
.remi/skills/delinquency-review/: SKILL.md
.remi/skills/lease-risk/: SKILL.md
config/: base.yaml  dev.yaml  local.yaml  prod.yaml
data/: README.md
docs/: architecture.md
frontend/: README.md  package-lock.json  package.json
sandbox/: Dockerfile
scripts/: dashboard.py  dry_run.py  load_demo_data.sh
src/remi/: __init__.py  __main__.py
tests/: conftest.py
tests/agent/: test_thread.py
tests/api/: test_ontology_router.py  test_remote_ontology_store.py
tests/domain/: test_context_builder.py  test_domain_yaml.py
tests/entailment/: test_composition.py  test_delinquency.py  test_hypothesis_pipeline.py  test_lease_cliff.py  test_new_evaluators.py  test_signal_evidence.py  test_signal_pipeline.py  test_vacancy_duration.py
tests/sandbox/: test_data_bridge.py  test_local_sandbox.py  test_sandbox_tools.py  test_sandbox_tools_integration.py  test_seeder.py
tests/tools/: test_workflows.py
tests/trace/: test_entailment_tracing.py  test_in_memory_store.py  test_trace_types.py  test_tracer.py
tests/unified/: test_circular_imports.py  test_usage_pricing.py  test_wiring.py
tests/vectors/: test_embedder.py  test_in_memory_store.py  test_pipeline.py
(+834 files in other folders)
