[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remi"
version = "0.1.0"
description = "REMI — Real Estate Management Intelligence. A layered AI architecture for property management analytics and operations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "REMI Team" }]

dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34,<1",
    "typer>=0.15,<1",
    "structlog>=24.4,<26",
    "textual>=8.2.1",
    "anthropic>=0.86.0",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-generativeai>=0.5"]
all-providers = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
]
postgres = [
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
]
dev = [
    "remi[postgres]",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "httpx>=0.28,<1",
]

[project.scripts]
remi = "remi.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/remi"]
artifacts = ["src/remi/skills/*.md", "src/remi/agents/**/app.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
